--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="http://www.facebook.com"><img src="img/facebook.svg"></a>
             <a href="http://www.twitter.com"><img src="img/twitter.svg"></a>
             <a href="http://www.youtube.com"><img src="img/youtube.svg"></a>
-            <p>Contacto: info@viajacol.co - (57-1 7634234)</p>
+            <p>Contacto: skenda.computers@gmail.com - (+57 3182361078)</p>
         </div>
     </footer>
 </div>    
