--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div id="contenedor">
         <nav>
             <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PLANES</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="home">HOME</a></li>
+                <li><a href="planes">PLANES</a></li>
+                <li><a href="contacto">CONTACTO</a></li>
             </ul>
         </nav>
         <div id="imgPrinc">
